# pdf-converter

./: .env.exemple  .gitignore  ARCHITECTURE_TODO.md  LAYER_IMPLEMENTATION_CHECKLIST.md  docker-compose.yaml  pyproject.toml
infra/: pyproject.toml
infra/cache/: __init__.py
infra/cache/implementation/: redis.py
infra/cache/interface/: cache.py
infra/database/: __init__.py
infra/database/implementation/: postgres.py  repository.py
infra/database/interface/: database.py
infra/http/implementation/: httpx.py
infra/http/interface/: http.py
infra/messaging/: __init__.py
infra/messaging/implementation/: bus.py
infra/messaging/interface/: bus.py
infra/messaging/schemas/: bus_entities.py
infra/messaging/startup/: bootstrap.py  builder.py
infra/storage/: s3.py
scripts/docker/: down-all.sh  up-all.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/api_gateway/: app.py  container.py  lifespan.py  routers.py  settings.py
services/api-gateway/src/api_gateway/routes/: account.py  conversion.py  io.py
services/api-gateway/src/api_gateway/schemas/: account.py  conversion.py
services/api-gateway/src/api_gateway/use_cases/account/: __init__.py  create_account.py  get_account.py
services/api-gateway/src/api_gateway/use_cases/conversion/: __init__.py  create_conversion_job.py  get_conversion_job.py
services/conversion-service/: .env.exemple  pyproject.toml
services/conversion-service/src/conversion_service/: app.py  container.py  lifespan.py  routers.py  settings.py
(+25 files in other folders)
